--- a/NOVA/Views/Shared/_Layout_Fiyat_yonetim.cshtml
+++ b/NOVA/Views/Shared/_Layout_Fiyat_yonetim.cshtml
@@ -49,8 +49,8 @@
     let data = await response.json()
     return data;
         }
-        async function getFiyatAsync(fiyatkodu,toptan,perakende,value) {
-            var url = "http://192.168.2.13:83/api/fiyat/" + fiyatkodu + "/" + toptan.replace(',', '.') + "/" + perakende.replace(',', '.')+"/"+value
+        async function getFiyatAsync(fiyatkodu,toptan,perakende,value,userid) {
+            var url = "http://192.168.2.13:83/api/fiyat/" + fiyatkodu + "/" + toptan.replace(',', '.') + "/" + perakende.replace(',', '.') + "/" + value + "/" + userid;
     let response = await fetch(url);
     let data = await response.json()
     return data;
