--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -120,10 +120,17 @@
 
         </li>
         <li class="menu-item" id="finans" style="display: @ViewBag.DisplayFinans">
-            <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
+            <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-trending-up"></i>
                 <div data-i18n="Misc">Finans</div>
             </a>
+            <ul class="menu-sub">
+                <li class="menu-item" id="kur" style="display: @ViewBag.DisplayKur">
+                    <a href="@Url.Action("Kur", "Finans")" class="menu-link">
+                        <div data-i18n="Without menu">Kur Yönetimi</div>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li class="menu-item" id="muhasebe" style="display: @ViewBag.DisplayMuhasebe">
             <a href="javascript:void(0);" class="menu-link menu-toggle" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bx-laptop bx-flashing' ></i> <span>Modül üzerinde çalışılmaktadır</span>">
@@ -177,10 +184,10 @@
             <ul class="menu-sub">
                 <li class="menu-item" id="kullanici" style="display: @ViewBag.Display1">
                     <a href="@Url.Action("KullaniciAyar", "YonetimPaneli")" class="menu-link">
-                        <div data-i18n="Without menu">Kullanıcı Ayarları</div>
+                        <div data-i18n="Without menu">Uygulama Ayarları</div>
                     </a>
                 </li>
-                <li class="menu-item" id="yetki" style="display: @ViewBag.Display2">
+                @*<li class="menu-item" id="yetki" style="display: @ViewBag.Display2">
                     <a href="@Url.Action("YetkiAyar", "YonetimPaneli")" class="menu-link">
                         <div data-i18n="Without navbar">Kullanıcı Yetkileri</div>
                     </a>
@@ -189,7 +196,7 @@
                     <a href="#" class="menu-link">
                         <div data-i18n="Without navbar">Kullanıcı İstatistikleri</div>
                     </a>
-                </li>
+                </li>*@
 
             </ul>
         </li>
