--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -6145,6 +6145,23 @@
             }
             return value;
         }
+        function readURL(input) {
+            document.getElementById("resimKaydet").removeAttribute("disabled")
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#blah')
+                        .attr('src', e.target.result);
+                };
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+        function close() {
+            @{Session["Alert"] = null;
+            }
+        }
     </script>
 </body>
 </html>
